- Temporal fix for Serial port not working on MacOSX - Some cleanup and organization - Added some platformio lib deps

--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -15,5 +15,7 @@ framework = arduino
 lib_extra_dirs = ../lib
 board_flash_mode = dio
 
+lib_deps = 89, https://github.com/fablabbcn/Arduino-EasyTransfer
+
 # ; POR AHORA NO FUNCIONA CON ESTO (PARA 3M DE FLASH)
 # ; build_flags = -Wl, -Tesp8266.flash.4m.l
