--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -13,3 +13,5 @@ platform = atmelsam
 board = zeroUSB
 framework = arduino
 lib_extra_dirs = ../lib
+
+lib_deps = 479, 942, https://github.com/fablabbcn/Arduino-EasyTransfer
