Big commit - Implemented external command to reset to factory defaults: "set config factory" - Implemented new configuration system 	- Reading interval per sensor 	- Global publish interval 	- Simplified EEPROM saving - Removed some unused modes - Memory management optimizations - New sensor control interface (for sensors with controllable settings) - Readings are now keeped in to RAM memory until next publish. - New behaviour: 	- Only change mode from configuration. 	- Button click toggles betwen setup and configured mode - Led does a micro flash as a heart beat signal when on battery - Led feedback about low battery, charging and charge finished. - New power status system. - Configuration in sdcard file: config.txt - Fixed some wrong battery readings. - Removed Time sensor. - Removed Netwroks sensor - Listed platformio deps for auto install of dependencies (one needs a fix) - ESP: Changes in AP mode webserver page. - ESP: avoid trying wifi connection if there is no credentials configured. - ESP: reduced AP scans to minimal - ESP: removed braquets from SSID name

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -4,7 +4,7 @@
 # ;   Upload options: custom upload port, speed and extra flags
 # ;   Library options: dependencies, extra library storages
 # ;   Advanced options: extra scripting
-# ;
+# #
 # ; Please visit documentation for the other options and examples
 # ; http://docs.platformio.org/page/projectconf.html
 
@@ -12,6 +12,19 @@
 platform = atmelsam
 board = zeroUSB
 framework = arduino
+
 lib_extra_dirs = ../lib
 
-lib_deps = 479, 942, https://github.com/fablabbcn/Arduino-EasyTransfer
+lib_deps = https://github.com/adafruit/Adafruit_ASFcore, https://github.com/fablabbcn/Arduino-EasyTransfer, https://github.com/bersch/MCP3424, 873, 322, 401, 64, 479, 1192, 160, 942
+
+# 873 = RTCZero
+# 322 = sdFat
+# 401 = WatchDog
+# 64 = ArduinoJson
+# 479 = SHT31
+# 1192 = FlashStorage
+# 158 = Adafruit-INA219
+# 942 = U8g2
+
+
+# TODO: fix Watchdog lib can't find Adafruit_Asfcore, QUICK FIX: copy Adafruit_Asfcore contents inside "SleepyDog Library_ID401" folder.
