-- Automatic installation of dependencies -- New ESP upload script -- Removed Watchdog dependency

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -12,19 +12,16 @@
 platform = atmelsam
 board = zeroUSB
 framework = arduino
-
 lib_extra_dirs = ../lib
 
-lib_deps = https://github.com/adafruit/Adafruit_ASFcore, https://github.com/fablabbcn/Arduino-EasyTransfer, https://github.com/bersch/MCP3424, 873, 322, 401, 64, 479, 1192, 160, 942
-
-# 873 = RTCZero
-# 322 = sdFat
-# 401 = WatchDog
-# 64 = ArduinoJson
-# 479 = SHT31
-# 1192 = FlashStorage
-# 158 = Adafruit-INA219
-# 942 = U8g2
-
-
-# TODO: fix Watchdog lib can't find Adafruit_Asfcore, QUICK FIX: copy Adafruit_Asfcore contents inside "SleepyDog Library_ID401" folder.
+lib_deps = 
+	RTCZero,									>=1.5.1			# id 873
+	SdFat,										>=1.0.1			# id 322
+	ArduinoJson,							>=5.10.1		# id 64
+	FlashStorage,							>=0.6.0			# id 1192
+	Adafruit-INA219,					>=f2c2f84ec9	# id 160
+	Adafruit SHT31 Library,		>=1.0.0			# id 479
+	U8g2,											>=2.16.1		# id 942
+	https://github.com/fablabbcn/Arduino-EasyTransfer
+	https://github.com/bersch/MCP3424
+	https://github.com/fablabbcn/DS2482-library
