--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -14,8 +14,13 @@ board = esp12e
 framework = arduino
 lib_extra_dirs = ../lib
 board_flash_mode = dio
+upload_speed = 230400
+extra_script = uploadESP.py
 
-lib_deps = 89, https://github.com/fablabbcn/Arduino-EasyTransfer
+lib_deps =
+  Time,				>=1.5		# id 44
+  ArduinoJson,		>=5.10.1	# id 64
+  PubSubClient,		>=2.6		# id 89
+  https://github.com/fablabbcn/Arduino-EasyTransfer
 
-# ; POR AHORA NO FUNCIONA CON ESTO (PARA 3M DE FLASH)
 # ; build_flags = -Wl, -Tesp8266.flash.4m.l
