--- a/mock-api/package.json
+++ b/mock-api/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "karma start --single-run --browsers ChromeHeadless karma.conf.js",
     "start": "nodemon server.js"
   },
   "author": "FabLab Barcelona",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.1.2",
+    "karma": "^1.7.1",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
     "mocha": "^3.5.3",
     "nodemon": "^1.11.0"
   },
