--- a/mock-api/package.json
+++ b/mock-api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "karma start --single-run --browsers ChromeHeadless karma.conf.js",
+    "test": "./node_modules/casperjs/bin/casperjs test casperjs/test.js",
     "start": "nodemon server.js"
   },
   "author": "FabLab Barcelona",
