--- a/mock-api/package.json
+++ b/mock-api/package.json
@@ -6,23 +6,17 @@
   "scripts": {
     "autotest": "./node_modules/.bin/supervisor -q -n exit -w 'casperjs/test.js' --exec npm run test",
     "test": "./node_modules/casperjs/bin/casperjs test casperjs/test.js",
-    "start": "nodemon server.js"
+    "api": "./node_modules/.bin/json-server -w status.json",
+    "web": "nodemon server.js"
   },
   "author": "FabLab Barcelona",
   "license": "ISC",
   "devDependencies": {
-    "chai": "^4.1.2",
-    "karma": "^1.7.1",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-mocha": "^1.3.0",
-    "mocha": "^3.5.3",
+    "casperjs": "^1.1.4",
+    "json-server": "^0.12.0",
     "nodemon": "^1.11.0",
     "supervisor": "^0.12.0"
   },
   "dependencies": {
-    "body-parser": "^1.17.2",
-    "cors": "^2.8.4",
-    "express": "^4.15.3"
   }
 }
