--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,18 @@ sudo: false
 cache:
     directories:
         - "~/.platformio"
+        - "mock-api/node_modules"
 
 env:
 #   - PLATFORMIO_CI_SRC=examples/Boards_Bluetooth/Adafruit_Bluefruit_LE
 #   - PLATFORMIO_CI_SRC=examples/Boards_Bluetooth/Arduino_101_BLE PLATFORMIO_CI_EXTRA_ARGS="--board=genuino101"
 #   - PLATFORMIO_CI_SRC=examples/Boards_USB_Serial/Blue_Pill_STM32F103C PLATFORMIO_CI_EXTRA_ARGS="--board=bluepill_f103c8 --project-option='framework=arduino'"
 #   - PLATFORMIO_CI_SRC=examples/Export_Demo/myPlant_ESP8266 PLATFORMIO_CI_EXTRA_ARGS="--board=nodemcuv2 --project-option='lib_ignore=WiFi101'"
+    - THEURL='localhost:3000'
 
 install:
     - pip install -U platformio
+    - cd mock-api; npm install; cd ..
 
     #
     # Libraries from PlatformIO Library Registry:
@@ -35,7 +38,14 @@ install:
     # http://platformio.org/lib/show/177/Adafruit_BluefruitLE_nRF51
 
 
+before_script:
+    - npm run api &
+    - npm run web &
+    - sleep 2
+
 script:
-    - echo '-------------------------'
-    - cd esp; pio run
-    - cd sam; pio run
+    - echo 'Trying to build esp and sam with pio'
+    - cd esp; pio run; cd ..
+    - cd sam; pio run; cd ..
+    - echo 'Running end to end tests with casperjs'
+    - cd mock-api; npm run test
