--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,10 @@ env:
 #   - PLATFORMIO_CI_SRC=examples/Boards_Bluetooth/Arduino_101_BLE PLATFORMIO_CI_EXTRA_ARGS="--board=genuino101"
 #   - PLATFORMIO_CI_SRC=examples/Boards_USB_Serial/Blue_Pill_STM32F103C PLATFORMIO_CI_EXTRA_ARGS="--board=bluepill_f103c8 --project-option='framework=arduino'"
 #   - PLATFORMIO_CI_SRC=examples/Export_Demo/myPlant_ESP8266 PLATFORMIO_CI_EXTRA_ARGS="--board=nodemcuv2 --project-option='lib_ignore=WiFi101'"
-    - THEAPI='localhost:3000'
-    - THEWEB='localhost:8000'
 
 install:
     - pip install -U platformio
-    - cd mock-api; npm install; cd ..
+    - cd mock-api; npm install
 
     #
     # Libraries from PlatformIO Library Registry:
@@ -49,4 +47,8 @@ script:
     - cd esp; pio run; cd ..
     - cd sam; pio run; cd ..
     - echo 'Running end to end tests with casperjs'
+    - npm -v
+    - node -v
+    - pwd
+    - ls
     - cd mock-api; npm run test
