--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -14,8 +14,8 @@ board = esp12e
 framework = arduino
 lib_extra_dirs = ../lib
 board_flash_mode = dio
-upload_speed = 230400
-extra_script = uploadESP.py
+upload_speed = 115200
+extra_scripts = uploadESP.py
 
 lib_deps =
   Time,						>=1.5		# id 44
