--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -22,6 +22,7 @@ lib_deps =
 	Adafruit-INA219,		>=f2c2f84ec9	# id 160
 	Adafruit SHT31 Library,	>=1.0.0			# id 479
 	U8g2,					>=2.16.1		# id 942
+	Low-Power,				>=1.6			# id 38
 	https://github.com/fablabbcn/Arduino-EasyTransfer
 	https://github.com/bersch/MCP3424
 	https://github.com/fablabbcn/DS2482-library
