--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -15,14 +15,15 @@ framework = arduino
 lib_extra_dirs = ../lib
 
 lib_deps =
-	RTCZero,				>=1.5.1			# id 873
-	SdFat,					>=1.0.1			# id 322
+	RTCZero,			>=1.5.1			# id 873
+	SdFat,				>=1.0.1			# id 322
 	ArduinoJson,			>=5.10.1		# id 64
 	FlashStorage,			>=0.6.0			# id 1192
-	Adafruit-INA219,		>=f2c2f84ec9	# id 160
-	Adafruit SHT31 Library,	>=1.0.0			# id 479
-	U8g2,					>=2.16.1		# id 942
-	Low-Power,				>=1.6			# id 38
+	Adafruit-INA219,		>=f2c2f84ec9		# id 160
+	Adafruit SHT31 Library,		>=1.0.0			# id 479
+	U8g2,				>=2.16.1		# id 942
+	Low-Power,			>=1.6			# id 38
+	Adafruit HTU21DF Library,	>=1.0.1			# id 566
 	https://github.com/fablabbcn/Arduino-EasyTransfer
 	https://github.com/bersch/MCP3424
 	https://github.com/fablabbcn/DS2482-library
