--- a/mock-api/package.json
+++ b/mock-api/package.json
@@ -22,6 +22,7 @@
     "gulp": "^3.9.1",
     "gulp-file-insert": "^1.0.3",
     "gulp-gzip": "^1.4.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-rename": "^1.2.2"
   }
 }
