--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -14,7 +14,8 @@ board = esp12e
 framework = arduino
 lib_extra_dirs = ../lib
 board_flash_mode = dio
-upload_speed = 115200
+upload_speed = 921600
+upload_resetmethod = none
 extra_scripts = uploadESP.py
 
 lib_deps =
@@ -22,7 +23,5 @@ lib_deps =
   ArduinoJson,				>=5.10.1	# id 64
   https://github.com/fablabbcn/pubsubclient
   https://github.com/fablabbcn/Arduino-EasyTransfer
-
-
 
 # ; build_flags = -Wl, -Tesp8266.flash.4m.l
