Started Urban Board refurbish

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -8,9 +8,9 @@
 # ; Please visit documentation for the other options and examples
 # ; http://docs.platformio.org/page/projectconf.html
 
-[env:zeroUSB]
+[env:sck2]
 platform = atmelsam
-board = zeroUSB
+board = sck2
 framework = arduino
 lib_extra_dirs = ../lib
 
