Hardware testing big commit

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -15,12 +15,12 @@ framework = arduino
 lib_extra_dirs = ../lib
 
 lib_deps =
+	806
 	RTCZero,					>=1.5.1			# id 873
 	SdFat,						>=1.0.1			# id 322
 	ArduinoJson,				>=5.10.1		# id 64
-	FlashStorage,				>=0.6.0			# id 1192
 	Adafruit-INA219,			>=f2c2f84ec9	# id 160
-	Adafruit SHT31 Library,		>=1.0.0			# id 479
+	Adafruit SHT31 Library,		>=1.0.0			# id 479		// TO be removed
 	U8g2,						>=2.16.1		# id 942
 	Arduino Low Power,			>=1.2.0			# id 1577
 	Adafruit HTU21DF Library,	>=1.0.1			# id 566
@@ -28,3 +28,7 @@ lib_deps =
 	https://github.com/uChip/MCP342X
 	https://github.com/fablabbcn/DS2482-library
 	https://github.com/WestfW/ArduinoZero-PMUX-report
+	https://github.com/sparkfun/SparkFun_BQ27441_Arduino_Library
+	https://github.com/adafruit/Adafruit_MPL3115A2_Library
+
+# 806 = SPIFlash (needed id because a duplicated name)
