Telnet debug for ESP

--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -21,6 +21,7 @@ extra_scripts = uploadESP.py
 lib_deps =
   Time,						>=1.5		# id 44
   ArduinoJson,				>=5.10.1	# id 64
+  RemoteDebug,							# id 1266
   https://github.com/fablabbcn/pubsubclient
   https://github.com/fablabbcn/Arduino-EasyTransfer
 
