--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -19,10 +19,20 @@ upload_resetmethod = none
 extra_scripts = uploadESP.py
 
 lib_deps =
-  Time,						>=1.5		# id 44
-  ArduinoJson,				>=5.10.1	# id 64
-  RemoteDebug,							# id 1266
+  
+  ; Time -> id 44
+  Time@>=1.5
+  
+  ; ArduinoJson - > id 64
+  ArduinoJson@>=5.10.1
+
+  ; RemoteDebug -> id 1266 
+  RemoteDebug@>=1.2.0
+  
+  ; RadioHead -> id 124
+  RadioHead@>=1.82
+
+  ; PubSubclient
   https://github.com/fablabbcn/pubsubclient
-  https://github.com/fablabbcn/Arduino-EasyTransfer
 
 # ; build_flags = -Wl, -Tesp8266.flash.4m.l
