Implemented sd card publish

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -47,6 +47,9 @@ lib_deps =
 	; FlashStorage -> id 1192
 	FlashStorage@>=0.7.1
 
+	; SparkFun MAX3010x
+	1288
+
 	https://github.com/uChip/MCP342X
 	https://github.com/fablabbcn/DS2482-library
 	https://github.com/WestfW/ArduinoZero-PMUX-report
