--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -8,6 +8,9 @@
 # ; Please visit documentation for the other options and examples
 # ; http://docs.platformio.org/page/projectconf.html
 
+[platformio]
+home_dir = .platformio
+
 [env:sck2]
 platform = atmelsam
 board = sck2
