--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,6 @@ install:
 before_script:
     - npm run api &
     - npm run web &
-    - cd ../sam; pio run
     - sleep 2
 
 script:
@@ -50,6 +49,7 @@ script:
     - pio run
     - cd ..
     - cd sam
+    - sh first.sh
     - pio run
     - cd ..
     - echo 'Running end to end tests with casperjs'
