--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ sudo: false
 cache:
     directories:
         - "~/.platformio"
-        - "mock-api/node_modules"
+          #- "mock-api/node_modules"
 
 env:
 #   - PLATFORMIO_CI_SRC=examples/Boards_Bluetooth/Adafruit_Bluefruit_LE
