--- a/.travis.yml
+++ b/.travis.yml
@@ -1,69 +1,34 @@
-language: python
-python:
-  - "2.7"
+matrix:
+  include:
+    - language: python
+      python: 2.7
+      install:
+        - pip install -U platformio
+      before_script:
+        - pwd
+      script:
+        -  echo 'Trying to build esp and sam with pio'
+        - pwd
+        - cd esp
+        - pio run
+        - cd ..
+        - cd sam
+        - ./first.sh
+        - cd ..
 
-# Cache PlatformIO packages using Travis CI container-based infrastructure
-sudo: false
-cache:
-  directories:
-    - "~/.platformio"
-      #- "mock-api/node_modules"
-
-env:
-  - TO_TEST=firmware
-  - TO_TEST=web
-#   - PLATFORMIO_CI_SRC=examples/Boards_Bluetooth/Adafruit_Bluefruit_LE
-#   - PLATFORMIO_CI_SRC=examples/Boards_Bluetooth/Arduino_101_BLE PLATFORMIO_CI_EXTRA_ARGS="--board=genuino101"
-#   - PLATFORMIO_CI_SRC=examples/Boards_USB_Serial/Blue_Pill_STM32F103C PLATFORMIO_CI_EXTRA_ARGS="--board=bluepill_f103c8 --project-option='framework=arduino'"
-#   - PLATFORMIO_CI_SRC=examples/Export_Demo/myPlant_ESP8266 PLATFORMIO_CI_EXTRA_ARGS="--board=nodemcuv2 --project-option='lib_ignore=WiFi101'"
-
-before_install:
-  - pwd
-
-install:
-  - pip install -U platformio
-  - cd mock-api; npm install
-  - npm install finalhandler
-
-    #
-    # Libraries from PlatformIO Library Registry:
-    #
-    # http://platformio.org/lib/show/44/Time
-    # http://platformio.org/lib/show/419/SimpleTimer
-    #
-    # http://platformio.org/lib/show/17/Adafruit-CC3000
-    # http://platformio.org/lib/show/28/SPI4Teensy3
-    # http://platformio.org/lib/show/91/UIPEthernet
-    # http://platformio.org/lib/show/418/WildFireCore
-    # http://platformio.org/lib/show/420/WildFire-CC3000
-    # http://platformio.org/lib/show/65/WiFlyHQ
-    # http://platformio.org/lib/show/19/Adafruit-DHT
-    # http://platformio.org/lib/show/299/WiFi101
-    # http://platformio.org/lib/show/259/BLEPeripheral
-    # http://platformio.org/lib/show/177/Adafruit_BluefruitLE_nRF51
-
-
-before_script:
-  - pwd
-  - npm run api &
-  - npm run web &
-  - sleep 2
-
-script:
-  - echo 'Trying to build esp and sam with pio'
-  - cd ..
-  - cd esp
-  - pio run
-  - cd ..
-  - cd sam
-  - stage: 'pio run'
-  - ./first.sh
-  - cd ..
-  - echo 'Running end to end tests with casperjs'
-  - cd mock-api
-  - npm -v
-  - node -v
-  - pwd
-  - ls
-  - stage: 'npm tests'
-    script: ./npm_test.sh
+    - language: node_js
+      install:
+        - cd mock-api; npm install
+        - npm install finalhandler
+      before_script:
+        - npm run api &
+        - npm run web &
+        - sleep 2
+      script:
+        - echo 'Running end to end tests with casperjs'
+        - cd mock-api
+        - npm -v
+        - node -v
+        - pwd
+        - ls
+        - npm run test
