Travis: Use node_js 7

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ matrix:
         - ./first.sh
 
     - language: node_js
+      node_js:
+        - 7
       install:
         - cd mock-api; npm install
         - npm install finalhandler
