Fix on travis settings

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ matrix:
       script:
         - echo 'Trying to build SAM'
         - ./first.sh
+        - pio run
 
     - language: node_js
       node_js:
