Small fixes on build system

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -20,37 +20,37 @@ extra_scripts = uploadSAM.py
 
 lib_deps =
 	
-	; SPIFlash -> id 806
+#	; SPIFlash -> id 806
 	806@>=3.1.0
 
-	; RTCZero -> id 873
+#	; RTCZero -> id 873
 	RTCZero@>=1.5.1
 
-	; SdFat -> id 322
+#	; SdFat -> id 322
 	SdFat@>=1.0.1
 
-	; ArduinoJson -> id 64
+#	; ArduinoJson -> id 64
 	ArduinoJson@>=5.11.2
 
-	; Adafruit-INA219 -> id 160
+#	; Adafruit-INA219 -> id 160
 	160
 
-	; Adafruit SHT31 Library -> id 479	(to be removed)
+#	; Adafruit SHT31 Library -> id 479	(to be removed)
 	Adafruit SHT31 Library@>=1.0.0
 
-	; U8g2 -> id 942
+#	; U8g2 -> id 942
 	U8g2@>=2.16.1
 
-	; Arduino Low Power -> id 1577
+#	; Arduino Low Power -> id 1577
 	Arduino Low Power@>=1.2.0
 
-	; RadioHead -> id 124 
+#	; RadioHead -> id 124 
 	RadioHead@>=1.82
 
-	; FlashStorage -> id 1192
+#	; FlashStorage -> id 1192
 	FlashStorage@>=0.7.1
 
-	; SparkFun MAX3010x
+#	; SparkFun MAX3010x
 	1288
 
 	https://github.com/uChip/MCP342X
