--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -14,23 +14,23 @@ board = esp12e
 framework = arduino
 lib_extra_dirs = ../lib
 board_flash_mode = dio
-upload_speed = 921600
+upload_speed = 460800
 upload_resetmethod = none
 extra_scripts = uploadESP.py
 
 lib_deps =
   
-  ; Time -> id 44
+#  ; Time -> id 44
   Time@>=1.5
   
-  ; ArduinoJson - > id 64
+#  ; ArduinoJson - > id 64
   ArduinoJson@>=5.10.1
 
-  ; RemoteDebug -> id 1266 
+#  ; RemoteDebug -> id 1266 
   RemoteDebug@>=1.2.0
   
-  ; RadioHead -> id 124
+#  ; RadioHead -> id 124
   RadioHead@>=1.82
 
-  ; PubSubclient
+#  ; PubSubclient
   https://github.com/fablabbcn/pubsubclient
