--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -13,7 +13,7 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 lib_extra_dirs = ../lib
-board_flash_mode = dio
+board_build.flash_mode = dio
 upload_speed = 115200
 upload_resetmethod = none
 extra_scripts = uploadESP.py
