Fix I2S hang in arduino samd core

--- a/sam/.gitignore
+++ b/sam/.gitignore
@@ -11,4 +11,19 @@
 !.platformio/packages/framework-arduinosam/variants
 .platformio/packages/framework-arduinosam/variants/*
 !.platformio/packages/framework-arduinosam/variants/sck2
+
+!.platformio/packages/framework-arduinosam/libraries
+.platformio/packages/framework-arduinosam/libraries/*
+!.platformio/packages/framework-arduinosam/libraries/__cores__
+.platformio/packages/framework-arduinosam/libraries/__cores__/*
+!.platformio/packages/framework-arduinosam/libraries/__cores__/samd
+.platformio/packages/framework-arduinosam/libraries/__cores__/samd/*
+!.platformio/packages/framework-arduinosam/libraries/__cores__/samd/I2S
+.platformio/packages/framework-arduinosam/libraries/__cores__/samd/I2S/*
+!.platformio/packages/framework-arduinosam/libraries/__cores__/samd/I2S/src
+.platformio/packages/framework-arduinosam/libraries/__cores__/samd/I2S/src/*
+!.platformio/packages/framework-arduinosam/libraries/__cores__/samd/I2S/src/utility
+.platformio/packages/framework-arduinosam/libraries/__cores__/samd/I2S/src/utility/*
+!.platformio/packages/framework-arduinosam/libraries/__cores__/samd/I2S/src/utility/SAMD21_I2SDevice.h
+
 SAM_firmware.uf2
