--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -9,6 +9,7 @@
 # ; http://docs.platformio.org/page/projectconf.html
 
 [env:esp12e]
+build_flags = !sh ../git-rev.sh
 platform = espressif8266
 board = esp12e
 framework = arduino
