--- a/tools/fastBridge/platformio.ini
+++ b/tools/fastBridge/platformio.ini
@@ -7,6 +7,8 @@
 ;
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
+[platformio]
+home_dir = ../../sam/.platformio
 
 [env:sck2]
 platform = atmelsam
