Support for OneWire Dallas Temperature via Auxiliary connector

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -54,6 +54,9 @@ lib_deps =
 #	; SparkFun MAX3010x
 	1288
 
+# 	; DallasTemperature - > id 54
+	DallasTemperature
+
 	https://github.com/fablabbcn/MCP342X
 	https://github.com/fablabbcn/DS2482-library
 	https://github.com/WestfW/ArduinoZero-PMUX-report
