--- a/mock-api/package.json
+++ b/mock-api/package.json
@@ -23,6 +23,7 @@
     "gulp-file-insert": "^1.0.3",
     "gulp-gzip": "^1.4.2",
     "gulp-livereload": "^3.8.1",
-    "gulp-rename": "^1.3.0"
+    "gulp-rename": "^1.3.0",
+    "gulp-base64-favicon": "^1.0.2"
   }
 }
