--- a/mock-api/package.json
+++ b/mock-api/package.json
@@ -24,6 +24,7 @@
     "gulp-gzip": "^1.4.2",
     "gulp-livereload": "^3.8.1",
     "gulp-rename": "^1.3.0",
-    "gulp-base64-favicon": "^1.0.2"
+    "gulp-base64-favicon": "^1.0.2",
+    "del": "^3.0.0"
   }
 }
