Fix on ArduinoJson version support

--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -25,7 +25,7 @@ lib_deps =
   Time@>=1.5
   
 #  ; ArduinoJson - > id 64
-  ArduinoJson@>=5.10.1
+  ArduinoJson@=5.13
 
 #  ; RemoteDebug -> id 1266 
   RemoteDebug@>=1.2.0
