--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -31,7 +31,7 @@ lib_deps =
 	SdFat@>=1.0.1
 
 #	; ArduinoJson -> id 64
-	ArduinoJson@>=5.11.2
+	ArduinoJson@=5.13
 
 #	; Adafruit-INA219 -> id 160
 	160
