Integrated CCS811 VOC's sensor to urban board and removed from auxiliary

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -54,6 +54,9 @@ lib_deps =
 # 	; DallasTemperature - > id 54
 	DallasTemperature
 
+# 	; Sparkfun CCS811 -> id 1626
+	SparkFun CCS811 Arduino Library@>=1.0.7
+
 	https://github.com/fablabbcn/MCP342X
 	https://github.com/fablabbcn/DS2482-library
 	https://github.com/WestfW/ArduinoZero-PMUX-report
@@ -63,4 +66,3 @@ lib_deps =
 	https://github.com/fablabbcn/SparkFun_ToF_Range_Finder-VL6180_Arduino_Library
 	https://github.com/fablabbcn/Adafruit_BME680
 	https://github.com/adafruit/Adafruit_Sensor
-	https://github.com/fablabbcn/SparkFun_CCS811_Arduino_Library
