RAM/Flash readings list WIP

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -21,7 +21,7 @@ extra_scripts = uploadSAM.py
 
 lib_deps =
 
-#	; SPIFlash -> id 806
+#	; SPIMemory (former SPIFlash) -> id 806
 	806@>=3.1.0
 
 #	; RTCZero -> id 873
