Fix on wrong dependency versions

--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -22,17 +22,17 @@ extra_scripts = uploadESP.py
 lib_deps =
   
 #  ; Time -> id 44
-  Time@>=1.5
+  Time@1.5
   
 #  ; ArduinoJson - > id 64
-  ArduinoJson@=5.13
+  ArduinoJson@5.13.4
 
 #  ; RemoteDebug -> id 1266 
-  RemoteDebug@>=1.2.0
+  RemoteDebug@1.2.0
   
 #  ; RadioHead -> id 124
-  RadioHead@>=1.82
+  RadioHead@1.85
 
 #  ; PubSubclient
-  https://github.com/fablabbcn/pubsubclient
-  https://github.com/me-no-dev/ESPAsyncWebServer
+  https://github.com/fablabbcn/pubsubclient@1f72be4
+  https://github.com/me-no-dev/ESPAsyncWebServer@95dedf7
