--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -22,48 +22,48 @@ extra_scripts = uploadSAM.py
 lib_deps =
 
 #	; SPIMemory (former SPIFlash) -> id 806
-	806@>=3.1.0
+	806@3.2.1
 
 #	; RTCZero -> id 873
-	RTCZero@>=1.5.1
+	RTCZero@1.5.3
 
 #	; SdFat -> id 322
-	SdFat@>=1.0.1
+	SdFat@2016.7.24
 
 #	; ArduinoJson -> id 64
-	ArduinoJson@=5.13
+	ArduinoJson@5.13.4
 
 #	; Adafruit-INA219 -> id 160
-	160
+	160@1.0.4
 
 #	; Adafruit SHT31 Library -> id 479	(to be removed)
-	Adafruit SHT31 Library@>=1.0.0
+	Adafruit SHT31 Library@1.1.0
 
 #	; U8g2 -> id 942
-	U8g2@>=2.16.1
+	U8g2@2.26.1
 
 #	; Arduino Low Power -> id 1577
-	Arduino Low Power@>=1.2.0
+	Arduino Low Power@1.2.1
 
 #	; RadioHead -> id 124
-	RadioHead@>=1.82
+	RadioHead@1.85
 
 #	; FlashStorage -> id 1192
-	FlashStorage@>=0.7.1
+	FlashStorage@0.7.1
 
 #	; SparkFun MAX3010x
 	1288
 
 # 	; DallasTemperature - > id 54
-	DallasTemperature
+	DallasTemperature@3.8.0
 
-	https://github.com/fablabbcn/MCP342X
-	https://github.com/fablabbcn/DS2482-library
-	https://github.com/WestfW/ArduinoZero-PMUX-report
-	https://github.com/adafruit/Adafruit_MPL3115A2_Library
-	https://github.com/fablabbcn/I2CSoilMoistureSensor
-	https://github.com/fablabbcn/smartcitizen-kit-gases-pro-board
-	https://github.com/fablabbcn/SparkFun_ToF_Range_Finder-VL6180_Arduino_Library
-	https://github.com/fablabbcn/Adafruit_BME680
-	https://github.com/adafruit/Adafruit_Sensor
-	https://github.com/fablabbcn/SparkFun_CCS811_Arduino_Library
+	https://github.com/fablabbcn/SparkFun_CCS811_Arduino_Library@e00c0e1
+	https://github.com/fablabbcn/MCP342X@bda4689
+	https://github.com/fablabbcn/DS2482-library@4af7fd8
+	https://github.com/WestfW/ArduinoZero-PMUX-report@da72d53
+	https://github.com/adafruit/Adafruit_MPL3115A2_Library@cc2ad8e
+	https://github.com/fablabbcn/I2CSoilMoistureSensor@2165973
+	https://github.com/fablabbcn/smartcitizen-kit-gases-pro-board@5ccf8a3
+	https://github.com/fablabbcn/SparkFun_ToF_Range_Finder-VL6180_Arduino_Library@a926704
+	https://github.com/fablabbcn/Adafruit_BME680@76867d4
+	https://github.com/adafruit/Adafruit_Sensor@6f4785c
