Moved git revision script to tools folder

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -12,7 +12,7 @@
 home_dir = .platformio
 
 [env:sck2]
-build_flags = !sh ../git-rev.sh
+build_flags = !sh ../tools/git-rev.sh
 platform = atmelsam
 board = sck2
 framework = arduino
