Fix ESP dependency problem

--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -35,4 +35,8 @@ lib_deps =
 
 #  ; PubSubclient
   https://github.com/fablabbcn/pubsubclient#1f72be4
+
+#  ; ESPAsyncWeb server and dependencies
   https://github.com/me-no-dev/ESPAsyncWebServer#95dedf7
+  https://github.com/me-no-dev/AsyncTCP#f1a801f
+  https://github.com/me-no-dev/ESPAsyncTCP#7e9ed22
