Freeze platformio ini and upgrade tools submodule

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -13,7 +13,7 @@ home_dir = .platformio
 
 [env:sck2]
 build_flags = !sh ../tools/git-rev.sh
-platform = atmelsam
+platform = atmelsam@3.8.0
 board = sck2
 framework = arduino
 lib_extra_dirs = ../lib
