--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -57,6 +57,9 @@ lib_deps =
 # 	; Sparkfun CCS811 -> id 1626
 	SparkFun CCS811 Arduino Library@1.0.7
 
+#	; LinkedList -> id 443
+	LinkedList
+
 	https://github.com/fablabbcn/MCP342X#bda4689
 	https://github.com/fablabbcn/DS2482-library#4af7fd8
 	https://github.com/WestfW/ArduinoZero-PMUX-report#da72d53
