Implemented Sparkfun XA1110 I2C gps as GPS source

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -57,6 +57,12 @@ lib_deps =
 # 	; Sparkfun CCS811 -> id 1626
 	SparkFun CCS811 Arduino Library@1.0.7
 
+# 	; SparkFun I2C GPS Reading and Control -> id 1652 (For XA1110 Sparkfun i2c GPS)
+	1652
+
+# 	; TinyGPSPlus -> id 1655 -> https://github.com/mikalhart/TinyGPSPlus
+	1655
+
 	https://github.com/fablabbcn/MCP342X#bda4689
 	https://github.com/fablabbcn/DS2482-library#4af7fd8
 	https://github.com/WestfW/ArduinoZero-PMUX-report#da72d53
