Implemented Sparkfun NEO-M8U as GPS source

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -60,6 +60,9 @@ lib_deps =
 # 	; SparkFun I2C GPS Reading and Control -> id 1652 (For XA1110 Sparkfun i2c GPS)
 	1652
 
+# 	; SparkFun Ublox Arduino Library -> id 5746 (for u-Blox NEO-M8U GPS)
+	5746
+	
 # 	; TinyGPSPlus -> id 1655 -> https://github.com/mikalhart/TinyGPSPlus
 	1655
 
