Seeed 128x128 Oled screen is working with debug output

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -39,8 +39,8 @@ lib_deps =
 #	; Adafruit SHT31 Library -> id 479	(to be removed)
 	Adafruit SHT31 Library@1.1.0
 
-#	; U8g2 -> id 942
-	U8g2
+#	; U8g2 ->  forked to fablabbcn
+	https://github.com/fablabbcn/U8g2_Arduino
 
 #	; Arduino Low Power -> id 1577
 	Arduino Low Power@1.2.1
