--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -54,6 +54,9 @@ lib_deps =
 # 	; Sparkfun CCS811 -> id 1626
 	SparkFun CCS811 Arduino Library@1.0.7
 
+#	; LinkedList -> id 443
+	LinkedList
+
 # 	; Adafruit ADS1X15 ADC -> https://github.com/adafruit/Adafruit_ADS1X15
 	https://github.com/fablabbcn/Adafruit_ADS1X15
 
