Updated PubSubClient library

--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -35,8 +35,8 @@ lib_deps =
 #  ; http://www.airspayce.com/mikem/arduino/RadioHead/
   124@1.108
 
-#  ; PubSubclient
-  https://github.com/fablabbcn/pubsubclient#1f72be4
+#  ; PubSubclient -> id 89
+  PubSubClient@2.8
 
 #  ; ESPAsyncWeb server and dependencies
   https://github.com/me-no-dev/ESPAsyncWebServer#f13685e
