--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -33,8 +33,8 @@ lib_deps =
 #  ; RadioHead -> id 124
   RadioHead@1.85
 
-#  ; PubSubclient
-  https://github.com/fablabbcn/pubsubclient#1f72be4
+#  ; PubSubclient -> id 89
+  PubSubClient@2.8
 
 #  ; ESPAsyncWeb server and dependencies
   https://github.com/me-no-dev/ESPAsyncWebServer#f13685e
