Fix travis build error

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -9,7 +9,7 @@
 # ; http://docs.platformio.org/page/projectconf.html
 
 [platformio]
-home_dir = .platformio
+core_dir = .platformio
 
 [env:sck2]
 build_flags = !sh ../tools/git-rev.sh
@@ -65,7 +65,7 @@ lib_deps =
 	https://github.com/WestfW/ArduinoZero-PMUX-report#da72d53
 	https://github.com/adafruit/Adafruit_MPL3115A2_Library#cc2ad8e
 	https://github.com/fablabbcn/I2CSoilMoistureSensor#2165973
-	https://github.com/fablabbcn/smartcitizen-kit-gases-pro-board#5ccf8a3
+	https://github.com/fablabbcn/smartcitizen-kit-gases-pro-board
 	https://github.com/fablabbcn/SparkFun_ToF_Range_Finder-VL6180_Arduino_Library#a926704
 	https://github.com/fablabbcn/Adafruit_BME680#76867d4
 	https://github.com/adafruit/Adafruit_Sensor#6f4785c
