Updated MPL3115A2 libs

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -69,7 +69,10 @@ lib_deps =
 	https://github.com/fablabbcn/MCP342X#bda4689
 	https://github.com/fablabbcn/DS2482-library#4af7fd8
 	https://github.com/WestfW/ArduinoZero-PMUX-report#da72d53
-	https://github.com/adafruit/Adafruit_MPL3115A2_Library#cc2ad8e
+
+# 	; Adafruit MPL3115A2 Library
+	https://github.com/adafruit/Adafruit_MPL3115A2_Library@1.2.4
+
 	https://github.com/fablabbcn/I2CSoilMoistureSensor#2165973
 	https://github.com/fablabbcn/smartcitizen-kit-gases-pro-board
 	https://github.com/fablabbcn/SparkFun_ToF_Range_Finder-VL6180_Arduino_Library#a926704
