Update Adafruit Unified Sensor libs

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -77,4 +77,7 @@ lib_deps =
 	https://github.com/fablabbcn/smartcitizen-kit-gases-pro-board
 	https://github.com/fablabbcn/SparkFun_ToF_Range_Finder-VL6180_Arduino_Library#a926704
 	https://github.com/fablabbcn/Adafruit_BME680#76867d4
-	https://github.com/adafruit/Adafruit_Sensor#6f4785c
+
+# 	; Adafruit Unified Sensor Driver
+# 	; https://github.com/adafruit/Adafruit_Sensor 
+	https://github.com/adafruit/Adafruit_Sensor@1.1.4
