Cleaned and organized SAM libdep config

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -27,20 +27,22 @@ lib_deps =
 
 #	; RTCZero -> id 873
 # 	; https://github.com/arduino-libraries/RTCZero
-	https://github.com/arduino-libraries/RTCZero@1.6.0
+	873@1.6.0
 
 #	; SdFat -> id 322
 # 	; https://github.com/greiman/SdFat
-	SdFat@1.1.4
+	322@1.1.4
 
 #	; ArduinoJson -> id 64
 # 	; https://github.com/bblanchon/ArduinoJson/releases
-	ArduinoJson@6.16.1
+	64@6.16.1
 
-#	; Adafruit-INA219 -> id 160
+# 	; Adafruit INA219 Library -> id 160
+# 	; https://github.com/adafruit/Adafruit_INA219
 	160@1.0.4
 
-#	; U8g2 ->  forked to fablabbcn
+# 	; U8g2_Arduino: Arduino Monochrome Graphics Library
+#	; https://github.com/olikraus/U8g2_Arduino (forked from)
 	https://github.com/fablabbcn/U8g2_Arduino
 
 #	; RadioHead -> id 124
@@ -49,33 +51,51 @@ lib_deps =
 
 #	; FlashStorage -> id 1192
 # 	; https://github.com/cmaglie/FlashStorage
-	FlashStorage@1.0.0
+	1192@1.0.0
 
 # 	; DallasTemperature - > id 54
 # 	; https://github.com/milesburton/Arduino-Temperature-Control-Library
-	DallasTemperature@3.9.0
+	54@3.9.0
 
 # 	; Sparkfun CCS811 -> id 1626
 # 	; https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library
-	SparkFun CCS811 Arduino Library@2.0.1
+	1626@2.0.1
 
 #	; LinkedList -> id 443
-# 	; https://github.com/ivanseidel/LinkedList
 	https://github.com/ivanseidel/LinkedList#dac3874
 
-# 	; Adafruit ADS1X15 ADC -> https://github.com/adafruit/Adafruit_ADS1X15
-	https://github.com/fablabbcn/Adafruit_ADS1X15
+# 	; Adafruit ADS1X15 ADC
+# 	; https://github.com/adafruit/Adafruit_ADS1X15 (forked from)
+	https://github.com/fablabbcn/Adafruit_ADS1X15#939f4eb
 
-	https://github.com/fablabbcn/MCP342X#bda4689
-	https://github.com/fablabbcn/DS2482-library#4af7fd8
+# 	; ArduinoZero-PMUX-report
 	https://github.com/WestfW/ArduinoZero-PMUX-report#da72d53
 
+# 	; MCP342X Analog-to-Digital Converter Library
+# 	; https://github.com/uChip/MCP342X (forked from)
+	https://github.com/fablabbcn/MCP342X#bda4689
+
+# 	; DS2482 -> I2C to 1-Wire bridge
+# 	; https://github.com/paeaetech/paeae (forked from)
+	https://github.com/fablabbcn/DS2482-library#4af7fd8
+
 # 	; Adafruit MPL3115A2 Library
+# 	; https://github.com/adafruit/Adafruit_MPL3115A2_Library
 	https://github.com/adafruit/Adafruit_MPL3115A2_Library@1.2.4
 
+# 	; I2C Soil Moisture Sensor (chirp) -> TODO update fork
+# 	; https://github.com/Apollon77/I2CSoilMoistureSensor (forked from)
 	https://github.com/fablabbcn/I2CSoilMoistureSensor#2165973
+
+# 	; Smart Citizen Kit 2.0 Gases Pro Board
 	https://github.com/fablabbcn/smartcitizen-kit-gases-pro-board
+
+# 	; SparkFun ToF Range Finder - VL6180 Arduino Library
+# 	; https://github.com/sparkfun/SparkFun_ToF_Range_Finder-VL6180_Arduino_Library (forked from)
 	https://github.com/fablabbcn/SparkFun_ToF_Range_Finder-VL6180_Arduino_Library#a926704
+
+# 	; Adafruit BME680 Library -> TODO update fork
+# 	; https://github.com/adafruit/Adafruit_BME680 (forked from)
 	https://github.com/fablabbcn/Adafruit_BME680#76867d4
 
 # 	; Adafruit Unified Sensor Driver
