Add windows support to esp dynamic build_flags

--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -9,7 +9,7 @@
 # ; http://docs.platformio.org/page/projectconf.html
 
 [env:esp12e]
-build_flags = !sh ../tools/git-rev.sh
+build_flags = !python ../tools/git-rev.py
 platform = espressif8266
 board = esp12e
 framework = arduino
