Static Arduino Crore version fixed to 1.8.9 to avoid compilation errors

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -14,6 +14,7 @@ core_dir = .platformio
 [env:sck2]
 build_flags = !sh ../tools/git-rev.sh
 platform = atmelsam@5.0.1
+platform_packages = framework-arduino-samd@1.8.9
 board = sck2
 framework = arduino
 lib_extra_dirs = ../lib
