Added support for Sensirion SCD30 CO2 sensor

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -114,3 +114,7 @@ lib_deps =
 # 	; Adafruit Unified Sensor Driver
 # 	; https://github.com/adafruit/Adafruit_Sensor 
 	https://github.com/adafruit/Adafruit_Sensor@1.1.4
+
+# 	; SparkFun SCD30 Arduino Library
+# 	; https://github.com/sparkfun/SparkFun_SCD30_Arduino_Library
+	5449@1.0.12
