--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:esp12e]
 build_flags = !sh ../tools/git-rev.sh
-platform = espressif8266
+platform = espressif8266@^2.6.2
 board = esp12e
 framework = arduino
 lib_extra_dirs = ../lib
