Initial integration of SCD41

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -118,3 +118,7 @@ lib_deps =
 # 	; SparkFun SCD30 Arduino Library
 # 	; https://github.com/sparkfun/SparkFun_SCD30_Arduino_Library
 	5449@1.0.12
+
+# 	; SparkFun SCD4X Arduino Library
+# 	; https://github.com/sparkfun/SparkFun_SCD4x_Arduino_Library
+	12484@1.0.3
