--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -8,15 +8,13 @@
 # ; Please visit documentation for the other options and examples
 # ; http://docs.platformio.org/page/projectconf.html
 
-[env:esp12e]
+[env:esp32dev]
 build_flags = !sh ../tools/git-rev.sh
-platform = espressif8266@^2.6.2
-board = esp12e
+platform = espressif32
+board = esp32dev
 framework = arduino
 lib_extra_dirs = ../lib
 board_build.flash_mode = dio
-upload_speed = 115200
-upload_resetmethod = none
 extra_scripts = uploadESP.py
 
 lib_deps =
