SGP40 implementation WIP

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -118,3 +118,7 @@ lib_deps =
 # 	; SparkFun SCD30 Arduino Library
 # 	; https://github.com/sparkfun/SparkFun_SCD30_Arduino_Library
 	5449@1.0.12
+
+# 	; SparkFun SGP40 Arduino Library
+#	; https://github.com/sparkfun/SparkFun_SGP40_Arduino_Library
+	https://github.com/sparkfun/SparkFun_SGP40_Arduino_Library.git@1.0.4
