Added options for ESP32-C3-DevKitM-1

--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -11,11 +11,12 @@
 [env:esp32dev]
 build_flags = !sh ../tools/git-rev.sh
 platform = espressif32
-board = esp32dev
+; board = esp32dev
+board = esp32-c3-devkitm-1
 framework = arduino
 lib_extra_dirs = ../lib
-board_build.flash_mode = dio
-extra_scripts = uploadESP.py
+; board_build.flash_mode = dio
+; extra_scripts = uploadESP.py
 
 lib_deps =
 
