Initial commit for ENS160 implementation

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -118,3 +118,7 @@ lib_deps =
 # 	; SparkFun SCD30 Arduino Library
 # 	; https://github.com/sparkfun/SparkFun_SCD30_Arduino_Library
 	5449@1.0.12
+
+# 	; SparkFun Indoor Air Quality Sensor-ENS160 Arduino Library
+# 	; https://github.com/sparkfun/SparkFun_Indoor_Air_Quality_Sensor-ENS160_Arduino_Library
+	https://github.com/sparkfun/SparkFun_Indoor_Air_Quality_Sensor-ENS160_Arduino_Library@1.0.3
