--- a/mock-api/package.json
+++ b/mock-api/package.json
@@ -17,7 +17,7 @@
     "gulp": "^4.0.2",
     "json-server": "^0.15.0",
     "nodemon": "^1.19.1",
-    "phantomjs": "^2.1.7",
+    "phantomjs-prebuilt": "^2.1.7",
     "supervisor": "^0.12.0",
     "vinyl-source-stream": "^2.0.0"
   },
@@ -26,6 +26,8 @@
     "gulp-file-insert": "^2.0.0",
     "gulp-gzip": "^1.4.2",
     "gulp-livereload": "^4.0.1",
-    "gulp-rename": "^1.4.0"
+    "gulp-rename": "^1.4.0",
+    "gulp-base64-favicon": "^1.0.3",
+    "gulp-util": "^3.0.8"
   }
 }
