Implemented initial support for SPS30

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -118,3 +118,7 @@ lib_deps =
 # 	; SparkFun SCD30 Arduino Library
 # 	; https://github.com/sparkfun/SparkFun_SCD30_Arduino_Library
 	5449@1.0.12
+
+#   ; Sensirion SPS30 library
+#   ; https://github.com/Sensirion/arduino-sps/
+    https://github.com/Sensirion/arduino-sps/
