Initial SEN5X implementation

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -122,3 +122,7 @@ lib_deps =
 #   ; Sensirion SPS30 library
 #   ; https://github.com/Sensirion/arduino-sps/
     https://github.com/Sensirion/arduino-sps/
+
+#   ; Sensirion I2C SEN5X Arduino library
+#   ; https://github.com/Sensirion/arduino-i2c-sen5x
+    https://github.com/Sensirion/arduino-i2c-sen5x
