--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -122,3 +122,7 @@ lib_deps =
 #   ; Sensirion I2C SEN5X Arduino library
 #   ; https://github.com/Sensirion/arduino-i2c-sen5x
     https://github.com/Sensirion/arduino-i2c-sen5x
+
+#   ; Sensirion I2C SFA3X Arduino library
+#   ; https://github.com/Sensirion/arduino-i2c-sfa3x
+    https://github.com/Sensirion/arduino-i2c-sfa3x
