Updated platformio.ini lib_deps syntax

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -22,25 +22,25 @@ extra_scripts = uploadSAM.py
 
 lib_deps =
 
-#	; SPIMemory (former SPIFlash) -> id 806
+#	; SPIMemory (former SPIFlash)
 # 	; https://github.com/Marzogh/SPIMemory
-	806@3.4.0
+    https://github.com/Marzogh/SPIMemory#v3.4.0
 
-#	; RTCZero -> id 873
+#	; RTCZero
 # 	; https://github.com/arduino-libraries/RTCZero
-	873@1.6.0
+    https://github.com/arduino-libraries/RTCZero#1.6.0
 
 #	; SdFat -> id 322
 # 	; https://github.com/greiman/SdFat
-	322@1.1.4
+    https://github.com/greiman/SdFat#1.1.4
 
 #	; ArduinoJson -> id 64
 # 	; https://github.com/bblanchon/ArduinoJson/releases
-	64@6.17.2
+    https://github.com/bblanchon/ArduinoJson#v6.17.2
 
 # 	; Adafruit INA219 Library -> id 160
 # 	; https://github.com/adafruit/Adafruit_INA219
-	160@1.0.4
+	https://github.com/adafruit/Adafruit_INA219#1.0.4
 
 # 	; U8g2_Arduino: Arduino Monochrome Graphics Library
 #	; https://github.com/olikraus/U8g2_Arduino (forked from)
@@ -48,27 +48,27 @@ lib_deps =
 
 #	; FlashStorage -> id 1192
 # 	; https://github.com/cmaglie/FlashStorage
-	1192@1.0.0
+    https://github.com/cmaglie/FlashStorage#1.0.0
 
 # 	; DallasTemperature - > id 54
 # 	; https://github.com/milesburton/Arduino-Temperature-Control-Library
-	54@3.9.0
+    https://github.com/milesburton/Arduino-Temperature-Control-Library#3.9.0
 
 # 	; Sparkfun CCS811 -> id 1626
 # 	; https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library
-	1626@2.0.1
+    https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library#v2.0.1
 
 # 	; SparkFun I2C GPS Reading and Control -> id 1652 (For XA1110 Sparkfun i2c GPS)
 # 	; https://github.com/sparkfun/SparkFun_I2C_GPS_Arduino_Library
-	1652@1.0.4
+    https://github.com/sparkfun/SparkFun_I2C_GPS_Arduino_Library#v1.0.4
 
 # 	; SparkFun u-blox Arduino GNSS Library
 # 	; https://github.com/sparkfun/SparkFun_u-blox_GNSS_Arduino_Library
-	11715@2.0.7
+    https://github.com/sparkfun/SparkFun_u-blox_GNSS_Arduino_Library#v2.0.7
 
 # 	; TinyGPSPlus -> id 1655 -> https://github.com/mikalhart/TinyGPSPlus
 # 	; https://github.com/mikalhart/TinyGPSPlus
-	1655@1.0.2
+    https://github.com/mikalhart/TinyGPSPlus#v1.0.2
 
 #	; LinkedList -> id 443
 	https://github.com/ivanseidel/LinkedList#dac3874
@@ -90,7 +90,7 @@ lib_deps =
 
 # 	; Adafruit MPL3115A2 Library
 # 	; https://github.com/adafruit/Adafruit_MPL3115A2_Library
-	796@1.2.4
+    https://github.com/adafruit/Adafruit_MPL3115A2_Library#1.2.4
 
 # 	; I2C Soil Moisture Sensor (chirp) -> TODO update fork
 # 	; https://github.com/Apollon77/I2CSoilMoistureSensor (forked from)
@@ -108,12 +108,12 @@ lib_deps =
 	https://github.com/fablabbcn/Adafruit_BME680#76867d4
 
 # 	; Adafruit Unified Sensor Driver
-# 	; https://github.com/adafruit/Adafruit_Sensor 
-	31@1.1.4
+# 	; https://github.com/adafruit/Adafruit_Sensor
+    https://github.com/adafruit/Adafruit_Sensor#1.1.4
 
 # 	; SparkFun SCD30 Arduino Library
 # 	; https://github.com/sparkfun/SparkFun_SCD30_Arduino_Library
-	5449@1.0.12
+    https://github.com/sparkfun/SparkFun_SCD30_Arduino_Library#v1.0.12
 
 #   ; Sensirion SPS30 library
 #   ; https://github.com/Sensirion/arduino-sps/
