Moved BME68X to Urban Board Sensors

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -103,9 +103,9 @@ lib_deps =
 # 	; https://github.com/sparkfun/SparkFun_ToF_Range_Finder-VL6180_Arduino_Library (forked from)
 	https://github.com/fablabbcn/SparkFun_ToF_Range_Finder-VL6180_Arduino_Library#a926704
 
-# 	; Adafruit BME680 Library -> TODO update fork
-# 	; https://github.com/adafruit/Adafruit_BME680 (forked from)
-	https://github.com/fablabbcn/Adafruit_BME680#76867d4
+# 	; Adafruit BME680 Library
+#   ; https://github.com/adafruit/Adafruit_BME680
+    https://github.com/adafruit/Adafruit_BME680#2.0.3
 
 # 	; Adafruit Unified Sensor Driver
 # 	; https://github.com/adafruit/Adafruit_Sensor
